# sample-tool

./: .coverage  .env  .env.localstack  .env.test  Dockerfile  Makefile  cli.py  docker-compose.yml  pyproject.toml  readme.md
initaws/: 01-configure-aws.sh  02-create-buckets.sh
src/: config.py  exception.py
src/clients/aws/: s3.py
src/repository/: aws.py  file.py  web.py
src/usecase/: upload_to_s3.py
tests/: conftest.py  test_usecase.py
tests/fixtures/: repository.py  s3_client.py  test_settings.py
tests/repository/: test_aws.py  test_file.py  test_web.py
